service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: default
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: myapp-deployment
    app.kubernetes.io/version: "stable"
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: myapp-system
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: myapp-deployment
  ports:
  - name: https
    protocol: TCP
    port: 443   
    targetPort: 443
